logs/uncertainty-7967845.err
flatpak: error while loading shared libraries: libssl.so.10: cannot open shared object file: No such file or directory
Lmod has detected the following error: The following module(s) are unknown:
"slurm"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "slurm"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/orcd/home/002/akshatat/uncertainty_routing/experiment5_trustworthiness.py", line 248
    def test_one(
                 ^
IndentationError: unindent does not match any outer indentation level
